--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev": "npx nodemon server.js"
+    "dev": "npx nodemon server.js",
+    "cypress": "MONGODB_URI=mongodb://localhost/food-steps-cypress PORT=3002 npm start"
   },
   "jest": {
     "testEnvironment": "node"
