--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "npx nodemon server.js",
-    "cypress": "MONGODB_URI=mongodb://localhost/food-steps-cypress PORT=3002 npm start"
+    "cypress": "env MONGODB_URI=mongodb://localhost/food-steps-cypress PORT=3002 npm start"
   },
   "jest": {
     "testEnvironment": "node"
